# gOdoo-rpc

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  makefile  pyproject.toml  readme.md  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: quality.yml
src/godoo_rpc/: __init__.py  login.py  odoo2odoo_mapper.py  odoo_dataset.py
src/godoo_rpc/helpers/: env.py  importer.py  rpc.py
src/godoo_rpc/helpers/pandas/: dataset.py  read.py
src/godoo_rpc/importers/: __init__.py  import_csv.py  import_data.py  import_product_images.py  import_settings.py  import_translation.py  import_xl.py
tests/: test_odoorpc.py
wodoo_rpc/: __init__.py  api.py  file_2_odoo.py  helpers.py  odoo2odoo_mapper.py  odoo_dataset.py
wodoo_rpc/importers/: import_csv.py  import_data.py  import_product_images.py  import_translation.py
